# Brotato-ArchipelagoClient

./: .gitignore  CHANGES.md  LICENSE  README.md  TODO.txt  create_symlinks.ps1  edge_cases.txt  pyproject.toml
.github/workflows/: publish.yml
apworld/: Regions.py  Rules.py
apworld/brotato/: Constants.py  Items.py  Locations.py  Options.py  Regions.py  Rules.py  __init__.py
apworld/brotato/test/: TestStartingCharacters.py  __init__.py  test_starting_characters.py
apworld/docs/: en_Brotato.md  setup_en.md
client_mod/.import/: ap_button_icon_connected.png-574062f69410b12b4bf81e89cc5005f8.md5  ap_button_icon_connected.png-574062f69410b12b4bf81e89cc5005f8.stex  ap_button_icon_disconnected.png-7816d50487b6265199f7fbd435069637.md5  ap_button_icon_disconnected.png-7816d50487b6265199f7fbd435069637.stex  ap_icon_full.png-aef70b1896c8ca3ef6ec3597141df013.md5  ap_icon_full.png-aef70b1896c8ca3ef6ec3597141df013.stex  ap_item.png-40df4d386d902623bf65b8e8cd00d555.md5  ap_item.png-40df4d386d902623bf65b8e8cd00d555.stex  ap_pickup.png-814c51eeea714f4e64c0853398171e40.md5  ap_pickup.png-814c51eeea714f4e64c0853398171e40.stex  ap_upgrade_icon.png-216fe3caa5b918adfd71a07084635bf1.md5  ap_upgrade_icon.png-216fe3caa5b918adfd71a07084635bf1.stex
client_mod/mods-unpacked/RampagingHippy-Archipelago/: ap_button_icon_connected.png.import  ap_button_icon_disconnected.png.import  ap_upgrade_icon.png.import  config.json  manifest.json  mod_main.gd
images/: Archipelago Upgrade Icon.xcf
websocket_client/: Cargo.toml
websocket_client/src/: client.rs  lib.rs  to_variant.rs
(+35 files in other folders)
